--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,19 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    phpmyadmin:
+        depends_on:
+            - mysql
+        image: phpmyadmin/phpmyadmin
+        environment:
+            MYSQL_USERNAME: sail
+            MYSQL_ROOT_PASSWORD: password
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+        networks:
+            - sail
+        ports:
+            - "7081:80"
 networks:
     sail:
         driver: bridge
